2007-01-08  Diego Escalante Urrelo <diegoe@svn.gnome.org>

	* src/ephy-python-extension.c:
	* src/epiphany.override:

	Fixes a problem at link time on Darwin, bug #387233. Patch by paul.

2007-01-08  Diego Escalante Urrelo <diegoe@svn.gnome.org>

	* embed/mozilla/EphyAboutModule.cpp:

	Fixes the escaping in the error message "The page %s was not fully 
	loaded yet when the browser crashed..." by changing the
	g_strdup_printf into a g_markup_printf_escaped. Bug #374627. Patch by
	Diego Escalante Urrelo.

2007-01-08  Diego Escalante Urrelo <diegoe@svn.gnome.org>

	* src/popup-commands.c: (background_download_completed)

	Check the result of ephy_file_launch_desktop_file () so if it fails we
	try an alternative naming of the background capplet: gnome-background.
	This is seen in fedora. Bug #387206, which is actually caused by
	bugzilla.redhat.com #201867.

2007-01-08  Diego Escalante Urrelo <diegoe@svn.gnome.org>

	* data/glade/form-signing-dialog.glade:
	* data/glade/prefs-dialog.glade:

	Removed the hardcoded invisible char, note that this might readd
	itself to the file if someone edits it. It has been suggested that we
	move over to glade-3. Patch by Vitali Ischenko. Bug #393910.

2007-01-03  Diego Escalante Urrelo <diegoe@svn.gnome.org>

	* embed/ephy-favicon-cache.c: (icon_is_obsolete),
	(remove_obsolete_icons):
	* embed/ephy-history.c: (page_is_obsolete),
	(remove_obsolete_pages):
	
	Avoid use of localtime by computing expiry in seconds instead of days.
	Patch by Chris Wilson.

2007-01-03  Diego Escalante Urrelo <diegoe@svn.gnome.org>

	* data/glade/prefs-dialog.glade:

	Corrects the expand of the Privacy tab in the Preferences window.
	Patch by Baptiste Mille-Mathias.

2007-01-03  Diego Escalante Urrelo <diegoe@svn.gnome.org>

	* data/mime-types-permissions.xml:

	Added text/csv as a safe type (note that the alias
	text/x-comma-separate-values is also present). Patch by Gaëtan
	Podevijn.

2006-12-31  Christian Persch  <chpe@svn.gnome.org>
